[gd_scene load_steps=10 format=3 uid="uid://bo8xlu07bbxd4"]

[ext_resource type="LabelSettings" uid="uid://oqy5ca8pacxg" path="res://assets/fonts/100_white.tres" id="1_cntwu"]
[ext_resource type="Script" path="res://src/ui/ingame_ui.gd" id="1_qtvme"]
[ext_resource type="PackedScene" uid="uid://cwyypsmn1ys1k" path="res://src/levels/textured_button_for_ya.tscn" id="2_llcdi"]
[ext_resource type="FontFile" uid="uid://bkfbr3jn1rfa8" path="res://assets/fonts/CompassPro.ttf" id="4_p07ra"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xqgk"]
bg_color = Color(0.352941, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rv3du"]
font = ExtResource("4_p07ra")
font_size = 100
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_gov2j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver/Panel2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver/Panel2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7t6uo"]
resource_name = "show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver/Panel2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver/Panel2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_57lfs"]
_data = {
"RESET": SubResource("Animation_gov2j"),
"show": SubResource("Animation_7t6uo")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtvme")

[node name="GameOver" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="GameOver/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VB" type="VBoxContainer" parent="GameOver/Panel/MC"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="GameOver/Panel/MC/VB"]
layout_mode = 2
text = "GOOD JOB AH?"
label_settings = ExtResource("1_cntwu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HB" type="HBoxContainer" parent="GameOver/Panel/MC/VB"]
layout_mode = 2
alignment = 1

[node name="ReplayButton" parent="GameOver/Panel/MC/VB/HB" instance=ExtResource("2_llcdi")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text_shown = "Replay"

[node name="NextButton" parent="GameOver/Panel/MC/VB/HB" instance=ExtResource("2_llcdi")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text_shown = "Next"

[node name="MainMenuButton" parent="GameOver/Panel/MC/VB" instance=ExtResource("2_llcdi")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text_shown = "Menu"

[node name="ExitButton" parent="GameOver/Panel/MC/VB" instance=ExtResource("2_llcdi")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text_shown = "Quit"

[node name="Panel2" type="Panel" parent="GameOver"]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1xqgk")

[node name="Label" type="Label" parent="GameOver/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -241.0
offset_right = 160.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
text = "No more
levels
created.
Contact
Mario"
label_settings = SubResource("LabelSettings_rv3du")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_57lfs")
}

[node name="EffectsPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="GameOver/Panel/MC/VB/HB/ReplayButton" to="." method="_on_replay_button_button_up"]
[connection signal="button_up" from="GameOver/Panel/MC/VB/HB/NextButton" to="." method="_on_next_button_button_up"]
[connection signal="visibility_changed" from="GameOver/Panel/MC/VB/HB/NextButton" to="." method="_on_next_button_visibility_changed"]
[connection signal="button_up" from="GameOver/Panel/MC/VB/MainMenuButton" to="." method="_on_main_menu_button_button_up"]
[connection signal="button_up" from="GameOver/Panel/MC/VB/ExitButton" to="." method="_on_exit_button_button_up"]
